--- a/HTML_03 Ссылки/index03.2.html
+++ b/HTML_03 Ссылки/index03.2.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
 	<meta charset="utf-8">
 	<title>HOW-TO: Программа на Python, Часть 2</title>
@@ -6,22 +7,23 @@
 <body>
 	<h1>HOW-TO: Программа на Python, Часть 2</h1>
 	<ul>
-		<li><em>Программа на Python — часть 1</em></li>
-		<li><em>Программа на Python — часть 2</em></li>
-		<li><em>Программа на Python — часть 3</em></li>
+		<li><em><a href="../HTML_01 Теги и атрибуты/index01.1.html">Программа на Python — часть 1</a></em></li>
+		<li><em><a href="../HTML_01 Теги и атрибуты/index01.2.html">Программа на Python — часть 2</a></em></li>
+		<li><em><a href="../HTML_01 Теги и атрибуты/index01.3.html">Программа на Python — часть 3</a></em></li>
 	</ul>
-	<h2>Содержание</h2>
+	<h2 id="content">Содержание</h2>
 	<h3>HOW-TO: Программа на Python, Часть 2</h3>
 	<ul>
-		<li><u>Списки</u></li>
-		<li><u>Комментарии</u></li>
+		<li><a href="#lists">Списки</a></li>
+		<li><a href="#comments">Комментарии</a></li>
 	</ul><br>
 	<hr>
 	<p>В прошлом уроке мы рассмотрели простую программу, которая использовала raw_input для получения ответа пользователя, простые типы переменных и простой цикл «<strong>for</strong>». В этом уроке мы рассмотрим ещё больше типов переменных и напишем ещё больше программ. </p>
-	<h2>Списки</h2>
+	<h2 id="lists">Списки</h2>
+	<p><a href="#content">К содержанию</a></p>
 	<p>Давайте рассмотрим другой тип переменных, который называется <em>списки</em>. В других языках программирования они называются <em>массивами</em>. Если мы обратимся к аналогии с коробками для обуви, то массив (список) представляет собой несколько склеенных друг с другом коробок с одинаковыми вещами. Например, в одной коробке лежат вилки, в другой — ножи, в третьей — ложки. Посмотрим на простой список— список месяцев. Мы запрограммируем его так:</p><br>
 	<p><samp>months =<br>
-	['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec']</samp></p>
+		['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec']</samp></p>
 	<p>Чтобы создать список, мы заключили все значения в квадратные скобки ( '[' и ']' ). Мы назвали наш список <em>'months'</em>. Чтобы использовать список, мы дадим команду print <strong>months[0]</strong> или <strong>months[1]</strong> (которые выведут на экран <em>'Jan'</em> или <em>'Feb'</em>). Помните: счет начинается с нуля. Чтобы найти длину списка, можно использовать такую функцию: </p>
 	<p><samp>print len(months)</samp></p>
 	<p>которая вернёт 12.</p>
@@ -29,7 +31,8 @@
 	<p><samp>categories = ['Main dish','Meat','Fish','Soup','Cookies']</samp></p>
 	<p>Таким образом, в <strong>categories[0]</strong> хранится <em>'Main dish'</em>, а в <strong>categories[4]</strong> — <em>'Cookies'</em>. Всё очень просто. Я уверен, вы сможете придумать много других примеров использования списков.</p>
 	<hr>
-	<h2>Комментарии</h2>
+	<h2 id="comments">Комментарии</h2>
+	<p><a href="#content">К содержанию</a></p>
 	<p>Далее, мы должны обсудить комментарии. Комментарии важны по нескольким причинам. Они не только говорят вам или другим людям, что вы пытаетесь делать, но и напомнят вам через полгода, что же вы хотели сделать. Когда вы будете писать много программ, комментарии станут важными. Также при их помощи вы заставите Python игнорировать какие-либо части кода. Чтобы закомментировать строку, поставьте перед ней знак '#'. Например:</p>
 	<p><samp>#</samp></p>
 	<p>Это комментарий</p>
