--- a/HTML_03 Ссылки/index03.3.html
+++ b/HTML_03 Ссылки/index03.3.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
 	<meta charset="utf-8">
 	<title>HOW-TO: Программа на Python, Часть 3</title>
@@ -6,19 +7,20 @@
 <body>
 	<h1>HOW-TO: Программа на Python, Часть 3</h1>
 	<ul>
-		<li><em>Программа на Python — часть 1</em></li>
-		<li><em>Программа на Python — часть 2</em></li>
-		<li><em>Программа на Python — часть 3</em></li>
+		<li><em><a href="../HTML_01 Теги и атрибуты/index01.1.html">Программа на Python — часть 1</a></em></li>
+		<li><em><a href="../HTML_01 Теги и атрибуты/index01.2.html">Программа на Python — часть 2</a></em></li>
+		<li><em><a href="../HTML_01 Теги и атрибуты/index01.3.html">Программа на Python — часть 3</a></em></li>
 	</ul>
-	<h2>Содержание</h2>
+	<h2 id="content">Содержание</h2>
 	<h3>HOW-TO: Программа на Python, Часть 3</h3>
 	<ul>
-		<li><u>Модули</u></li>
-		<li><u>Функции</u></li>
+		<li><a href="#modules">Модули</a></li>
+		<li><a href="#functions">Функции</a></li>
 	</ul><br>
 	<hr>
 	<p>В прошлый раз мы изучали списки, подстановку переменных, комментарии, сравнение и присвоение, операторы <strong>if</strong> и <strong>while</strong>. Я обещал, что в этой части мы изучим модули и функции. Давайте начнём. </p>
-	<h2>Модули</h2>
+	<h2 id="modules">Модули</h2>
+	<p><a href="#content">К содержанию</a></p>
 	<p>Модули предлагают способ расширить программирование на Python. Вы можете создать свои модули, использовать те, которые поставляются с Python или которые написали другие. В самом Python есть сотни модулей, которые облегчают написание программ. Список модулей, поставляемых с Python, находится по адресу: <em><u>http://docs.python.org/modindex.html.</u></em> Некоторые модули предназначены для определённых операционных систем, но большинство из них кроссплатформенные и работают одинаково на <u>Linux</u>, <u>Mac</u> и <u>Microsoft Windows</u>. Для использования внешнего модуля необходимо импортировать его в программу. Один из модулей, поставляемых с Python, называется «random». Он даёт возможность генерировать псевдослучайные числа. Мы используем этот модуль в нашем первом примере.</p><br>
 	<p><samp>#=======================================<br>
 		# random_example.py<br>
@@ -30,7 +32,8 @@
 		&nbsp; print random.randint(1,10)</samp></p>
 	<p>Давайте разберём код по строкам. Первые четыре строки — это комментарии, о которых мы говорили в прошлый раз. Пятая строка говорит Python, что нужно использовать модуль «random». Мы должны явно указать Python на это.</p>
 	<hr>
-	<h2>Функции</h2>
+	<h2 id="functions">Функции</h2>
+	<p><a href="#content">К содержанию</a></p>
 	<p>Когда мы импортировали модуль random, мы использовали функцию <strong>randint()</strong>. Функция — это блок кода, который создан для того, чтобы вызывать его в программе, обычно, более одного раза. Это упрощает работу над программой и предотвращает набор одного и того же кода снова и снова. Грубо говоря, если вам нужно написать некоторый код больше, чем 1-2 раза, стоит сделать его функцией. Хотя следующие два примера очень простые, это хорошие примеры функций. Теперь мы хотим, скажем, взять два числа, сложить их, перемножить, вычесть одно из другого, затем вывести на экран эти числа и результаты одновременно. Допустим, нам нужно сделать это три раза для трёх наборов чисел. Тогда наш пример будет выглядеть как код ниже</p>
 	<p><samp>#silly example<br>
 		print '%d + %d = %d ' % (1,2,1+2)<br>
