--- a/HTML_03/base/index03_1.html
+++ b/HTML_03/base/index03_1.html
@@ -7,9 +7,9 @@
 <body>
 	<h1>HOW-TO: Программа на Python, Часть 1</h1>
 	<ul>
-		<li><em><a href="../HTML_01 Теги и атрибуты/index01.1.html">Программа на Python — часть 1</a></em></li>
-		<li><em><a href="../HTML_01 Теги и атрибуты/index01.2.html">Программа на Python — часть 2</a></em></li>
-		<li><em><a href="../HTML_01 Теги и атрибуты/index01.3.html">Программа на Python — часть 3</a></em></li>
+		<li><em><a href="index03_1.html">Программа на Python — часть 1</a></em></li>
+		<li><em><a href="index03_2.html">Программа на Python — часть 2</a></em></li>
+		<li><em><a href="index03_3.html">Программа на Python — часть 3</a></em></li>
 	</ul>
 	<h2 id="content">Содержание</h2>
 	<h3>HOW-TO: Программа на Python, Часть 1</h3>
