--- a/HTML_04/base/index04_2.html
+++ b/HTML_04/base/index04_2.html
@@ -5,6 +5,10 @@
 	<title>HOW-TO: Программа на Python, Часть 2</title>
 </head>
 <body>
+	<img title="Логотип Python" 
+		align="right" 
+		src="Icon-Python.png" 
+		alt="нет изображения">
 	<h1>HOW-TO: Программа на Python, Часть 2</h1>
 	<ul>
 		<li><em><a href="index04_1.html">Программа на Python — часть 1</a></em></li>
@@ -37,5 +41,10 @@
 	<p><samp>#</samp></p>
 	<p>Это комментарий</p>
 	<p>Комментарии можно вставлять в любое место в строке, но помните, что Python проигнорирует всё, что идёт после '#'.</p>
+	<table width="100%">
+		<td><a href="index04_1.html"><img title="Предыдущая" src="prev.png" alt="нет изображения"></a></td>
+		<td><a href="#content"><center><img title="К содержанию" src="home.png" alt="нет изображения"></a></center></td>
+		<td><a href="index04_3.html"><img title="Следующая" align="right" src="next.png" alt="нет изображения"></a></td>
+	</table>
 </body>
 </html>
