--- a/HTML_04/base/index04_1.html
+++ b/HTML_04/base/index04_1.html
@@ -5,6 +5,10 @@
 	<title>HOW-TO: Программа на Python, Часть 1</title>
 </head>
 <body>
+	<img title="Логотип Python" 
+		align="right" 
+		src="Icon-Python.png" 
+		alt="нет изображения">
 	<h1>HOW-TO: Программа на Python, Часть 1</h1>
 	<ul>
 		<li><em><a href="index04_1.html">Программа на Python — часть 1</a></em></li>
@@ -43,5 +47,10 @@
 		for cntr in range(0,10):<br>
 		&nbsp; print cntr</samp></p>
 	<p><em>Не забудьте поставить символ табуляции перед строкой «print cntr».</em> Это важно. В Python для указания на блоки кода используются не круглые «(» и фигурные «{» скобки как в других языках программирования, а отступы.</p>
-</body>
+	<table width="100%">
+		<td><a href="#no_scroll"><img title="Предыдущая" src="prev.png" alt="нет изображения"></a></td>
+		<td><a href="#content"><center><img title="К содержанию" src="home.png" alt="нет изображения"></a></center></td>
+		<td><a href="index04_2.html"><img title="Следующая" align="right" src="next.png" alt="нет изображения"></a></td>
+	</table>
+	</body>
 </html>
