--- a/HTML_04/base/index04_3.html
+++ b/HTML_04/base/index04_3.html
@@ -5,6 +5,10 @@
 	<title>HOW-TO: Программа на Python, Часть 3</title>
 </head>
 <body>
+	<img title="Логотип Python" 
+		align="right" 
+		src="Icon-Python.png" 
+		alt="нет изображения">
 	<h1>HOW-TO: Программа на Python, Часть 3</h1>
 	<ul>
 		<li><em><a href="index04_1.html">Программа на Python — часть 1</a></em></li>
@@ -59,5 +63,10 @@
 		DoTwo(1,4)<br>
 		DoTwo(10,5)</samp></p>
 	<p>Как видите, здесь написано меньше кода — 8 строк вместо 12. Если нам нужно будет чтолибо поменять в функции, мы сможем сделать это, не создавая проблем для нашей программы. Чтобы вызвать функцию, нужно написать её имя и параметры.</p>
+	<table width="100%">
+		<td><a href="index04_2.html"><img title="Предыдущая" src="prev.png" alt="нет изображения"></a></td>
+		<td><a href="#content"><center><img title="К содержанию" src="home.png" alt="нет изображения"></a></center></td>
+		<td><a href="#no_scroll"><img title="Следующая" align="right" src="next.png" alt="нет изображения"></a></td>
+	</table>
 </body>
 </html>
