--- a/HTML_04/add/index04_3_add.html
+++ b/HTML_04/add/index04_3_add.html
@@ -7,13 +7,13 @@
 <body>
 	<img title="Логотип Python" 
 		align="right" 
-		src="../img/Icon-Python.png" 
+		src="Icon-Python.png" 
 		alt="нет изображения">
 	<h1>HOW-TO: Программа на Python, Часть 3</h1>
 	<ul>
-		<li><em><a href="index04_1.html">Программа на Python — часть 1</a></em></li>
-		<li><em><a href="index04_2.html">Программа на Python — часть 2</a></em></li>
-		<li><em><a href="index04_3.html">Программа на Python — часть 3</a></em></li>
+		<li><em><a href="index04_1_add.html">Программа на Python — часть 1</a></em></li>
+		<li><em><a href="index04_2_add.html">Программа на Python — часть 2</a></em></li>
+		<li><em><a href="index04_3_add.html">Программа на Python — часть 3</a></em></li>
 	</ul>
 	<h2 id="content">Содержание</h2>
 	<h3>HOW-TO: Программа на Python, Часть 3</h3>
@@ -64,9 +64,9 @@
 		DoTwo(10,5)</samp></p>
 	<p>Как видите, здесь написано меньше кода — 8 строк вместо 12. Если нам нужно будет чтолибо поменять в функции, мы сможем сделать это, не создавая проблем для нашей программы. Чтобы вызвать функцию, нужно написать её имя и параметры.</p>
 	<table width="100%">
-		<td><a href="index04_2.html"><img title="Предыдущая" src="../img/prev.png" alt="нет изображения"></a></td>
-		<td><a href="#content"><center><img title="К содержанию" src="../img/home.png" alt="нет изображения"></a></center></td>
-		<td><a href="#no_scroll"><img title="Следующая" align="right" src="../img/next.png" alt="нет изображения"></a></td>
+		<td><a href="index04_2_add.html"><img title="Предыдущая" src="prev.png" alt="нет изображения"></a></td>
+		<td><a href="#content"><center><img title="К содержанию" src="home.png" alt="нет изображения"></a></center></td>
+		<td><a href="#no_scroll"><img title="Следующая" align="right" src="next.png" alt="нет изображения"></a></td>
 	</table>
 </body>
 </html>
