--- a/HTML_04/base/index04_1.html
+++ b/HTML_04/base/index04_1.html
@@ -48,9 +48,23 @@
 		&nbsp; print cntr</samp></p>
 	<p><em>Не забудьте поставить символ табуляции перед строкой «print cntr».</em> Это важно. В Python для указания на блоки кода используются не круглые «(» и фигурные «{» скобки как в других языках программирования, а отступы.</p>
 	<table width="100%">
-		<td><a href="#no_scroll"><img title="Предыдущая" src="../img/prev.png" alt="нет изображения"></a></td>
-		<td><a href="#content"><center><img title="К содержанию" src="../img/home.png" alt="нет изображения"></a></center></td>
-		<td><a href="index04_2.html"><img title="Следующая" align="right" src="../img/next.png" alt="нет изображения"></a></td>
+		<td>
+			<a href="#no_scroll">
+				<img title="Предыдущая" src="../img/prev.png" alt="нет изображения">
+			</a>
+		</td>
+		<td>
+			<a href="#content">
+				<center>
+					<img title="К содержанию" src="../img/home.png" alt="нет изображения">
+				</center>
+			</a>
+		</td>
+		<td>
+			<a href="index04_2.html">
+				<img title="Следующая" align="right" src="../img/next.png" alt="нет изображения">
+			</a>
+		</td>
 	</table>
 	</body>
 </html>
