--- a/HTML_04/base/index04_2.html
+++ b/HTML_04/base/index04_2.html
@@ -42,9 +42,23 @@
 	<p>Это комментарий</p>
 	<p>Комментарии можно вставлять в любое место в строке, но помните, что Python проигнорирует всё, что идёт после '#'.</p>
 	<table width="100%">
-		<td><a href="index04_1.html"><img title="Предыдущая" src="../img/prev.png" alt="нет изображения"></a></td>
-		<td><a href="#content"><center><img title="К содержанию" src="../img/home.png" alt="нет изображения"></a></center></td>
-		<td><a href="index04_3.html"><img title="Следующая" align="right" src="../img/next.png" alt="нет изображения"></a></td>
+		<td>
+			<a href="index04_1.html">
+				<img title="Предыдущая" src="../img/prev.png" alt="нет изображения">
+			</a>
+		</td>
+		<td>
+			<a href="#content">
+				<center>
+					<img title="К содержанию" src="../img/home.png" alt="нет изображения">
+				</center>
+			</a>
+		</td>
+		<td>
+			<a href="index04_3.html">
+				<img title="Следующая" align="right" src="../img/next.png" alt="нет изображения">
+			</a>
+		</td>
 	</table>
 </body>
 </html>
