--- a/HTML_04/base/index04_3.html
+++ b/HTML_04/base/index04_3.html
@@ -64,9 +64,23 @@
 		DoTwo(10,5)</samp></p>
 	<p>Как видите, здесь написано меньше кода — 8 строк вместо 12. Если нам нужно будет чтолибо поменять в функции, мы сможем сделать это, не создавая проблем для нашей программы. Чтобы вызвать функцию, нужно написать её имя и параметры.</p>
 	<table width="100%">
-		<td><a href="index04_2.html"><img title="Предыдущая" src="../img/prev.png" alt="нет изображения"></a></td>
-		<td><a href="#content"><center><img title="К содержанию" src="../img/home.png" alt="нет изображения"></a></center></td>
-		<td><a href="#no_scroll"><img title="Следующая" align="right" src="../img/next.png" alt="нет изображения"></a></td>
+		<td>
+			<a href="index04_2.html">
+				<img title="Предыдущая" src="../img/prev.png" alt="нет изображения">
+			</a>
+		</td>
+		<td>
+			<a href="#content">
+				<center>
+					<img title="К содержанию" src="../img/home.png" alt="нет изображения">
+				</center>
+			</a>
+		</td>
+		<td>
+			<a href="#no_scroll">
+				<img title="Следующая" align="right" src="../img/next.png" alt="нет изображения">
+			</a>
+		</td>
 	</table>
 </body>
 </html>
