--- a/HTML_05/base/index05_1.html
+++ b/HTML_05/base/index05_1.html
@@ -2,7 +2,7 @@
 <HTML> 
         <HEAD> 
             <META charset="utf-8"> 
-            <TITLE>HTML_02 Таблицы</TITLE> 
+            <TITLE>HTML_05 Формы</TITLE> 
         </HEAD> 
         <BODY> 
         <table align="center" width="700px">
