--- a/HTML_05/add/index05_2_add.html
+++ b/HTML_05/add/index05_2_add.html
@@ -45,9 +45,55 @@
             </fieldset>
             <fieldset>
                 <legend>Интересы</legend>
-                
+                <fieldset>
+                    <legend>Хобби</legend>
+                    <label><input type="checkbox" name="check[]" value="check1">Рыбалка</label><br>
+                    <label><input type="checkbox" name="check[]" value="check2">Астрономия</label><br>
+                    <label><input type="checkbox" name="check[]" value="check3">Дайвинг</label><br>
+                    <label><input type="checkbox" name="check[]" value="check4">Марки</label>
+                </fieldset>
+                <fieldset>
+                    <legend>Домашние животные</legend>
+                    <select name="pets" size="12" multiple>
+                        <optgroup label="Попугаи">
+                            <option value="parrot1">Волнистый</option>
+                            <option value="parrot1">Ара</option>
+                            <option value="parrot1">Неразлучник</option>
+                        </optgroup>
+                        <optgroup label="Рыба">
+                            <option value="fish1">Караси</option>
+                            <option value="fish2">окуни</option>
+                            <option value="fish3">Осётр</option>
+                        </optgroup>
+                        <optgroup label="Птицы">
+                            <option value="bird1">Стая ворон</option>
+                            <option value="bird2">Аист</option>
+                            <option value="bird3">Археоптерикс</option>
+                        </optgroup>
+                    </select>
+                </fieldset>
+            </fieldset>
+            <fieldset>
+                <legend>Данные для входа и восстановления пароля</legend>
+                <input type="text" name="login" pattern="[A-Za-z]" placeholder="Логин" minlength="5" maxlength="25" required><br>
+                <input type="password" name="pass" pattern="[A-Za-z]" placeholder="Пароль" minlength="10" maxlength="25" required autocomplete="off">
+            </fieldset>    
+            <fieldset>
+                <legend>Координаты</legend>
+                <input type="email" name="mail" placeholder="введите адрес почты"><br>
+                <input type="url" name="site" placeholder="введите адрес сайта">
+            </fieldset>
+            <fieldset>
+                <legend>Цифры</legend>
+                <input type="number" name="numbers" min="-2.5" max="2.5" step="0.1"><br>
+                <input type="range" name="range" min="1" max="10" step="1" value="5">
+            </fieldset>
+            <fieldset>
+                <legend>Кнопки управления</legend>
+                <input type="submit" value="Отправить">
+                <input type="reset" value="Сбросить"><br>
+                <input type="image" src="mail.jpg">
             </fieldset>
         </form>
-       
         </BODY> 
 </HTML> 
