--- a/CSS_01/add/letter.html
+++ b/CSS_01/add/letter.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>HOW-TO: Программа на Python, Часть 1</title>
+	<title>Пример сопроводительного письма программиста</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
