--- a/CSS_02/base/index_03_base.html
+++ b/CSS_02/base/index_03_base.html
@@ -55,7 +55,7 @@
 				Должен присутствовать цвет фона<br>
 				Во всех "статьях" сделайте отступ снизу от соседей равным .2em при помощи свойства margin-bottom. Картинка вставлена при помощи тега, плавание организовано по правому краю внутри данной статьи для этой картинки
 			</p>
-			<img src="img/icon_mail.png" alt="" class="image_mail">
+			<img src="../img/icon_mail.png" alt="" class="image_mail">
 			<div class="wrap"></div>
 		</div>
 	</div>
