--- a/CSS_04/add/index_01_add.html
+++ b/CSS_04/add/index_01_add.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>CSS_04. Задание доп_1</title>
+	<title>CSS_04. Задание дополнительное №1</title>
     <style>
         div{border: solid rgb(212, 208, 208) 1px; border-bottom-left-radius: 10px; border-top-right-radius: 10px;
         }
